--- a/lang/en.json
+++ b/lang/en.json
@@ -158,7 +158,7 @@
     },
     "biography": {
       "describeYourself.label": "Describe yourself as other see you:",
-      "notes.label": "Notes:",
+      "notes.label": "Notes from previous Ops:",
       "whyConfrontConspiracy": {
         "label": "Why did you choose to confront the Conspiracy:",
         "answer": {
@@ -273,6 +273,258 @@
     "skills.label": "Skills",
     "glance.label": "At a Glance",
     "motivation.label": "Motivations"
+  },
+  "ATDC.supernatural": {
+    "name.placeholder": "Name",
+    "notes.label": "Notes",
+    "skills.label": "Skills",
+    "glance.label": "At a Glance",
+    "motivation.label": "Motivations",
+    "conspiracy": {
+      "label": "Conspiracy",
+      "types": {
+        "placeholder.label": "Choose a Conspiracy",
+        "demonic": {
+          "label": "The DEMONIC Conspiracy",
+          "power": {
+            "label": "Power",
+            "options": {
+              "placeholder": "Choose a Power",
+              "option.1": "Armoured* ... Chitinous skin",
+              "option.2": "Cloak of Darkness",
+              "option.3": "Discover Desire",
+              "option.4": "Fly ... bat wings",
+              "option.5": "Fly ... insect wings",
+              "option.6": "Glamour",
+              "option.7": "Grant Power",
+              "option.8": "Great Strength*",
+              "option.9": "Inhuman Senses",
+              "option.10": "Incorporeal",
+              "option.11": "Open Portal ... to Hell",
+              "option.12": "Poltergeist*",
+              "option.13": "Possession",
+              "option.14": "Project Desire or Emotion",
+              "option.15": "Regenerate",
+              "option.16": "See in the dark",
+              "option.17": "Shocking True Form",
+              "option.18": "Spider Climb",
+              "option.19": "Spit Venom*",
+              "option.20": "Stench of Fear",
+              "option.21": "Summon & Command Insect Swarm",
+              "option.22": "Summon & Command Imps",
+              "option.23": "Summon & Command Servitor",
+              "option.24": "Summon & Command Demon",
+              "option.25": "Teeth & Claws*",
+              "option.26": "Teleport",
+              "option.27": "Track ... the soul",
+              "option.28": "Track ... by sin",
+              "option.29": "Wards, Bindings & Spells",
+              "option.30": "for Control ..."
+            }
+          },
+          "compulsion": {
+            "label": "Compulsion",
+            "options": {
+              "placeholder": "Choose a Compulsion",
+              "option.1": "Addicted to ... mortal pain",
+              "option.2": "Addicted to ... human flesh",
+              "option.3": "Attracted to ... mortal sin",
+              "option.4": "Destroy or Pollute the works of ... God",
+              "option.5": "Fascinated by ... mortal beauty",
+              "option.6": "Fascinated by ... mortal wit",
+              "option.7": "Obey ... Favoured of Lucifer",
+              "option.8": "Obey ... Hellish Nobility",
+              "option.9": "Obey ... Lucifer",
+              "option.10": "Obey ... Patron Demon",
+              "option.11": "Obey ... Summoner",
+              "option.12": "Tempt them",
+              "option.13": "for Control ..."
+            }
+          },
+          "deterrent": {
+            "label": "Deterrent",
+            "options": {
+              "placeholder": "Choose a Deterrent",
+              "option.1": "Noise: Trumpets",
+              "option.2": "Running water",
+              "option.3": "Symbol of ... Faith",
+              "option.4": "Symbol of ... Power",
+              "option.5": "True name",
+              "option.6": "Iconic Weapon of Faith",
+              "option.7": "for Control ..."
+            }
+          },
+          "vulnerability": {
+            "label": "Vulnerability",
+            "options": {
+              "placeholder": "Choose a Vulnerability",
+              "option.1": "Extreme Deterrence: Symbol of Power",
+              "option.2": "Extreme Deterrence: True Name",
+              "option.3": "Vulnerable to ... Holy Water",
+              "option.4": "Iconic Weapon of Faith",
+              "option.5": "Precise strike: Beheading",
+              "option.6": "Double Tap",
+              "option.7": "for Control ..."
+            }
+          }
+        },
+        "fae": {
+          "label": "The FAE Conspiracy",
+          "power": {
+            "label": "Power",
+            "options": {
+              "placeholder": "Choose a Power",
+              "option.1": "Armoured* ... Bark Skin",
+              "option.2": "Berserk rage*",
+              "option.3": "Cloak of Darkness",
+              "option.4": "Discover Desire",
+              "option.5": "Elemental Blast* of Nature",
+              "option.6": "Fly: butterfly wings",
+              "option.7": "Glamour",
+              "option.8": "Great Speed",
+              "option.9": "Great Strength*",
+              "option.10": "Inhuman Senses",
+              "option.11": "Inhuman Senses (Wolf)",
+              "option.12": "Mesmerism",
+              "option.13": "Open Portal ... to the Otherworld",
+              "option.14": "Project Desire or Emotion",
+              "option.15": "Regenerate",
+              "option.16": "See in the dark",
+              "option.17": "Shapechange (Wolf)",
+              "option.18": "Shocking True Form",
+              "option.19": "Spider Climb",
+              "option.20": "Summon & Command Wolves",
+              "option.21": "Summon & Command Ravens",
+              "option.22": "Summon & Command Servitors",
+              "option.23": "Summon & Command Fae Courtier",
+              "option.24": "Summon & Command Fae Knight",
+              "option.25": "Teeth & Claws*",
+              "option.26": "Track ... in 'the wild'",
+              "option.27": "Wards, Bindings & Spells",
+              "option.28": "for Control ..."
+            }
+          },
+          "compulsion": {
+            "label": "Compulsion",
+            "options": {
+              "placeholder": "Choose a Compulsion",
+              "option.1": "Addicted to ... mortal fear",
+              "option.2": "Addicted to ... mortal pain",
+              "option.3": "Addicted to ... mortal flesh",
+              "option.4": "Attracted to ... mortal blood",
+              "option.5": "Destroy or pollute the works of ... the New Gods",
+              "option.6": "Fascinated by ... Riddles",
+              "option.7": "Honour a debt",
+              "option.8": "Nature's phases ... Full Moon",
+              "option.9": "Nature's phases ... Season",
+              "option.10": "Obey ... Summoner",
+              "option.11": "Obey ... Patron Fae",
+              "option.12": "Tempt them",
+              "option.13": "for Control ..."
+            }
+          },
+          "deterrent": {
+            "label": "Deterrent",
+            "options": {
+              "placeholder": "Choose a Deterrent",
+              "option.1": "Antithetical Element",
+              "option.2": "Fresh ... Wolfsbane",
+              "option.3": "Bronze blade",
+              "option.4": "Sunlight",
+              "option.5": "Symbol of ... the New Gods",
+              "option.6": "for Control ..."
+            }
+          },
+          "vulnerability": {
+            "label": "Vulnerability",
+            "options": {
+              "placeholder": "Choose a Vulnerability",
+              "option.1": "Extreme Deterrence: Antithetical Element",
+              "option.2": "Vulnerable to ... Bronze",
+              "option.3": "Vulnerable to ... Silver",
+              "option.4": "Iconic Weapon",
+              "option.5": "Precise strike: Beheading",
+              "option.6": "Double Tap",
+              "option.7": "for Control ..."
+            }
+          }
+        },
+        "vampire": {
+          "label": "The VAMPIRE Conspiracy",
+          "power": {
+            "label": "Power",
+            "options": {
+              "placeholder": "Choose a Power",
+              "option.1": "Cloak of Darkness",
+              "option.2": "Fly",
+              "option.3": "Grant Power",
+              "option.4": "Great Speed",
+              "option.5": "Great Strength*",
+              "option.6": "Inhuman Senses",
+              "option.7": "Incorporeal (Mist)",
+              "option.8": "Invisible",
+              "option.9": "Mesmerism",
+              "option.10": "Poltergeist*",
+              "option.11": "Possession",
+              "option.12": "Regenerate",
+              "option.13": "See in the dark",
+              "option.14": "Shapechange (Wolf)",
+              "option.15": "Spider Climb",
+              "option.16": "Stench of Fear",
+              "option.17": "Summon & Command Wolves",
+              "option.18": "Summon & Command Rats",
+              "option.19": "Summon & Command Zombies",
+              "option.20": "Teeth & Claws*",
+              "option.21": "Track ... by blood",
+              "option.22": "Track ... by psychic connection",
+              "option.23": "Wards, Bindings & Spells",
+              "option.24": "for Control ..."
+            }
+          },
+          "compulsion": {
+            "label": "Compulsion",
+            "options": {
+              "placeholder": "Choose a Compulsion",
+              "option.1": "Addicted to ... human flesh",
+              "option.2": "Addicted to ... Vampiric blood",
+              "option.3": "Attracted to ... noise",
+              "option.4": "Attracted to ... any blood",
+              "option.5": "Attracted to ... human blood",
+              "option.6": "Bound to place",
+              "option.7": "Obey ... Vampire Creator/Sire",
+              "option.8": "Tempt them",
+              "option.9": "for Control ..."
+            }
+          },
+          "deterrent": {
+            "label": "Deterrent",
+            "options": {
+              "placeholder": "Choose a Deterrent",
+              "option.1": "Fire",
+              "option.2": "Fresh ... Garlic",
+              "option.3": "Mirrors",
+              "option.4": "Running water",
+              "option.5": "Salt",
+              "option.6": "Sunlight",
+              "option.7": "Symbol of ... Faith",
+              "option.8": "for Control ..."
+            }
+          },
+          "vulnerability": {
+            "label": "Vulnerability",
+            "options": {
+              "placeholder": "Choose a Vulnerability",
+              "option.1": "Extreme Deterrence: Fire",
+              "option.2": "Vulnerable to ... Green Oak Stake",
+              "option.3": "Iconic Weapon of Faith",
+              "option.4": "Precise strike: Heart",
+              "option.5": "Double Tap",
+              "option.6": "for Control ..."
+            }
+          }
+        }
+      }
+    } 
   },
   "ATDC.safeHouse": {
     "name.placeholder": "Name",
